--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
     <title></title>
   </head>
   <body>
+    <!-- This is a testing page, used for testing the API -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script>
       var jwt = localStorage.getItem('LiveHUB')
       var user = {
-        first_name: 'Will',
+        email: 'login@rtdsss.com',
+        first_name: 'WIll',
         last_name: 'Wise',
-        password: 'asdad',
-        email: 'asdkbadsq23@askd.com'
+        password: 'anz'
       }
-      axios.post('/users/create/', jQuery.param(user), {
-        headers: {
-          Authorization: 'Bearer ' + jwt
-        }
+      axios.post('/users/login/', jQuery.param(user), {
+        // headers: {
+        //   Authorization: 'Bearer ' + jwt
+        // }
       }).then((response) => {
         console.log(response.data)
       })
