--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
   </head>
   <body>
@@ -10,19 +11,35 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script>
       var jwt = localStorage.getItem('LiveHUB')
-      var user = {
-        email: 'login@rtdsss.com',
-        first_name: 'WIll',
-        last_name: 'Wise',
-        password: 'anz'
+      var payload = {
+        // 'email': 'will@williamwise.net'
+        'id': '89',
+        'challenge': 'wm895g',
+        'password': 'anzacs22'
       }
-      axios.post('/users/login/', jQuery.param(user), {
+      axios.post('/password-reset/validate-challenge/', jQuery.param(payload), {
         // headers: {
         //   Authorization: 'Bearer ' + jwt
         // }
       }).then((response) => {
         console.log(response.data)
       })
+
+
+      // var jwt = localStorage.getItem('LiveHUB')
+      // var payload = {
+      //   'email': 'will@williamwise.net'
+      //   // 'id': '89',
+      //   // 'challenge': 'znql71',
+      //   // 'password': 'anzacs22'
+      // }
+      // axios.post('/password-reset/', jQuery.param(payload), {
+      //   // headers: {
+      //   //   Authorization: 'Bearer ' + jwt
+      //   // }
+      // }).then((response) => {
+      //   console.log(response.data)
+      // })
     </script>
 
   </body>
